--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -2,7 +2,7 @@
   "name": "yo-ang",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "1.2.6",
+    "angular": "1.2.16",
     "json3": "~3.2.6",
     "es5-shim": "~2.1.0",
     "jquery": "~1.10.2",
@@ -10,11 +10,21 @@
     "angular-resource": "1.2.6",
     "angular-cookies": "1.2.6",
     "angular-sanitize": "1.2.6",
+    "angular-animate": "1.2.16",
     "angular-route": "1.2.6",
-    "bootstrap": "~3.1.1"
+    "bootstrap": "~3.1.1",
+    "videogular": "~1.0.0",
+    "videogular-controls": "~0.3.2",
+    "videogular-buffering": "~0.3.2",
+    "videogular-overlay-play": "~0.3.2",
+    "videogular-poster": "~0.3.2",
+    "videogular-themes-default": "~0.3.2"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
     "angular-scenario": "1.2.6"
+  },
+  "resolutions": {
+    "angular": "~1.2.16"
   }
 }
