--- a/backend/base.cfg
+++ b/backend/base.cfg
@@ -11,19 +11,20 @@ eggs =
     easy-thumbnails
 #    django-tagging
     django-tinymce
+    django-tastypie
 parts =
     django
 versions = versions
 
 [versions]
 djangorecipe = 1.3
-django = 1.3
+django = 1.6
 psycopg2 = 2.4.3
 south = 0.7.3
 Pillow = 2.0.0
 easy-thumbnails = 1.2
 # django-tagging = 0.3.1
-django-tinymce = 1.5.1b2
+django-tinymce = 1.5.2
 
 
 [django]
