--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -18,7 +18,9 @@
     "videogular-buffering": "~0.3.2",
     "videogular-overlay-play": "~0.3.2",
     "videogular-poster": "~0.3.2",
-    "videogular-themes-default": "~0.3.2"
+    "videogular-themes-default": "~0.3.2",
+    "angular-moment": "~0.7.1",
+    "moment": "~2.6.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
