--- a/backend/base.cfg
+++ b/backend/base.cfg
@@ -25,7 +25,7 @@ Pillow = 2.0.0
 easy-thumbnails = 1.2
 # django-tagging = 0.3.1
 django-tinymce = 1.5.2
-
+django-tastypie = 0.9.16
 
 [django]
 recipe = djangorecipe
