--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -20,7 +20,8 @@
     "videogular-poster": "~0.3.2",
     "videogular-themes-default": "~0.3.2",
     "angular-moment": "~0.7.1",
-    "moment": "~2.6.0"
+    "moment": "~2.6.0",
+    "angular-carousel": "~0.2.3"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
