--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -21,7 +21,7 @@
     "videogular-themes-default": "~0.3.2",
     "angular-moment": "~0.7.1",
     "moment": "~2.6.0",
-    "angular-carousel": "~0.2.3"
+    "angular-carousel": "git@github.com:radius/angular-carousel.git#0.2.4"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
